--- a/.github/workflows/ShiftLeft.yaml
+++ b/.github/workflows/ShiftLeft.yaml
@@ -6,16 +6,16 @@ name: Shiftleft Scan
 jobs:
   scanning:
     env:
-      APP_ID: cd4d4180b1c39c24457cf7eb14541c646ca826c984bbf59c609313a949f55618
+      APP_ID: a2883a3d9c1438091c60694baa53dcf4f3fc87e4af0ecc1958165a68537c5799
       BRANCH_NAME: main
-      SCAN_ID: 4b45b04171cf18f5a1313aad6442c7cb5ad23bc8469a5d68260cb0d0815dd6c7
-      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"http://6153-183-82-204-132.ngrok.io/resultapi\"\
-        ,\"SL_RESULTPARSER_API_HOST\":\"http://7474-183-82-204-132.ngrok.io/resultparserapi\"\
-        }')}}"
+      SCAN_ID: bb17d7d0275b8cb4c878c65a1b4d46ec00f79e5e1dd54409dc80a3c33f92a025
+      REQ_URL_MAP: "${{toJSON('{\"SL_API_HOST\":\"https://slapi.dev.securin.io\",\"\
+        SL_RESULT_API_HOST\":\"https://slresultapi.dev.securin.io\",\"SL_RESULTPARSER_API_HOST\"\
+        :\"https://slresultparserapi.dev.securin.io\"}')}}"
     steps:
     - name: Retrieve Token Info
       id: auth_token
-      run: "respJson=$(curl --location --request GET 'http://6153-183-82-204-132.ngrok.io/resultapi/aws/ecr/token'\
+      run: "respJson=$(curl --location --request GET 'https://slresultapi.dev.securin.io/resultapi/v1/aws/ecr/token'\
         \  --header 'Authorization: Bearer ${{secrets.CLI_ACCESS_TOKEN}}'  --data-raw\
         \ ' ' )\necho \"::set-output name=authTokenJson::$respJson\""
     - uses: actions/checkout@v2
