--- a/.github/workflows/ShiftLeft.yaml
+++ b/.github/workflows/ShiftLeft.yaml
@@ -13,14 +13,14 @@ jobs:
     env:
       APP_ID: 3bf0ce1177370ebf0a63d695c3d64a0a6f25f711479b79f29e8875e1c8f55410
       BRANCH_NAME: develop
-      SCAN_ID: c9aa228683fdb476953d038c5f2812a40b8ad22d892f3f83d4ed0bd9941cd071
-      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://4ff4-157-51-181-91.ngrok.io/resultapi\"\
-        ,\"SL_RESULTPARSER_API_HOST\":\"https://f502-157-51-181-91.ngrok.io/resultparserapi\"\
+      SCAN_ID: ad937bbb4d96a40dc2f43624a61446c2d31bc186e8d6dbd46462f7f71961a820
+      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://b884-103-176-166-204.ngrok.io/resultapi\"\
+        ,\"SL_RESULTPARSER_API_HOST\":\"https://df4a-103-176-166-204.ngrok.io/resultparserapi\"\
         }')}}"
     steps:
     - name: Retrieve Token Info
       id: auth_token
-      run: "respJson=$(curl --location --request GET 'https://4ff4-157-51-181-91.ngrok.io/resultapi/aws/ecr/token'\
+      run: "respJson=$(curl --location --request GET 'https://b884-103-176-166-204.ngrok.io/resultapi/aws/ecr/token'\
         \  --header 'Authorization: Bearer ${{secrets.CLI_ACCESS_TOKEN}}'  --data-raw\
         \ ' ' )\necho \"::set-output name=authTokenJson::$respJson\""
     - uses: actions/checkout@v2
