--- a/.github/workflows/ShiftLeft.yaml
+++ b/.github/workflows/ShiftLeft.yaml
@@ -13,14 +13,14 @@ jobs:
     env:
       APP_ID: 3bf0ce1177370ebf0a63d695c3d64a0a6f25f711479b79f29e8875e1c8f55410
       BRANCH_NAME: sample-branch-2
-      SCAN_ID: 57643ef2b56a4a76ecb40322c2fc353a7a8b7592a1f34fbb64bcd4cef105378e
-      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://4ff4-157-51-181-91.ngrok.io/resultapi\"\
-        ,\"SL_RESULTPARSER_API_HOST\":\"https://f502-157-51-181-91.ngrok.io/resultparserapi\"\
+      SCAN_ID: 2f097d4f1dfe1e72425865e45c9bd2544c6526a043cb3c452a788b1a90a0b5ec
+      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://b884-103-176-166-204.ngrok.io/resultapi\"\
+        ,\"SL_RESULTPARSER_API_HOST\":\"https://df4a-103-176-166-204.ngrok.io/resultparserapi\"\
         }')}}"
     steps:
     - name: Retrieve Token Info
       id: auth_token
-      run: "respJson=$(curl --location --request GET 'https://4ff4-157-51-181-91.ngrok.io/resultapi/aws/ecr/token'\
+      run: "respJson=$(curl --location --request GET 'https://b884-103-176-166-204.ngrok.io/resultapi/aws/ecr/token'\
         \  --header 'Authorization: Bearer ${{secrets.CLI_ACCESS_TOKEN}}'  --data-raw\
         \ ' ' )\necho \"::set-output name=authTokenJson::$respJson\""
     - uses: actions/checkout@v2
