--- a/.github/workflows/ShiftLeft.yaml
+++ b/.github/workflows/ShiftLeft.yaml
@@ -13,14 +13,14 @@ jobs:
     env:
       APP_ID: 3bf0ce1177370ebf0a63d695c3d64a0a6f25f711479b79f29e8875e1c8f55410
       BRANCH_NAME: main
-      SCAN_ID: f3637bdd49c2ff610f26d65a78ce2c502c8f24b287e392b43a580ac5fe2aa840
-      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://df7d-103-176-166-193.ngrok.io/resultapi\"\
-        ,\"SL_RESULTPARSER_API_HOST\":\"https://a657-103-176-166-193.ngrok.io/resultparserapi\"\
+      SCAN_ID: a0d7042bc85bbbb8680a33245d5bf12f2fae861df9f06128081476a19a25f594
+      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://8819-157-51-181-171.ngrok.io/resultapi\"\
+        ,\"SL_RESULTPARSER_API_HOST\":\"https://96e9-157-51-181-171.ngrok.io/resultparserapi\"\
         }')}}"
     steps:
     - name: Retrieve Token Info
       id: auth_token
-      run: "respJson=$(curl --location --request GET 'https://df7d-103-176-166-193.ngrok.io/resultapi/aws/ecr/token'\
+      run: "respJson=$(curl --location --request GET 'https://8819-157-51-181-171.ngrok.io/resultapi/aws/ecr/token'\
         \  --header 'Authorization: Bearer ${{secrets.CLI_ACCESS_TOKEN}}'  --data-raw\
         \ ' ' )\necho \"::set-output name=authTokenJson::$respJson\""
     - uses: actions/checkout@v2
