--- a/.github/workflows/ShiftLeft.yaml
+++ b/.github/workflows/ShiftLeft.yaml
@@ -13,14 +13,14 @@ jobs:
     env:
       APP_ID: 3bf0ce1177370ebf0a63d695c3d64a0a6f25f711479b79f29e8875e1c8f55410
       BRANCH_NAME: main
-      SCAN_ID: 8e0ed2d135e129ef17c8f665931bc4306ac0e12c1641f846fb1cc27973c28dd2
-      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://8819-157-51-181-171.ngrok.io/resultapi\"\
-        ,\"SL_RESULTPARSER_API_HOST\":\"https://96e9-157-51-181-171.ngrok.io/resultparserapi\"\
+      SCAN_ID: 42d437afca0cdf3cfe9d20fc8ccdbffaefdaa4b836cfc0e677baca714eeccf70
+      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://dbcf-103-176-167-204.ngrok.io/resultapi\"\
+        ,\"SL_RESULTPARSER_API_HOST\":\"https://827f-103-176-167-204.ngrok.io/resultparserapi\"\
         }')}}"
     steps:
     - name: Retrieve Token Info
       id: auth_token
-      run: "respJson=$(curl --location --request GET 'https://8819-157-51-181-171.ngrok.io/resultapi/aws/ecr/token'\
+      run: "respJson=$(curl --location --request GET 'https://dbcf-103-176-167-204.ngrok.io/resultapi/aws/ecr/token'\
         \  --header 'Authorization: Bearer ${{secrets.CLI_ACCESS_TOKEN}}'  --data-raw\
         \ ' ' )\necho \"::set-output name=authTokenJson::$respJson\""
     - uses: actions/checkout@v2
